# MART

./: .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  LICENSE-3RD-PARTY  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: code-quality-main.yaml  code-quality-pr.yaml  test.yml
configs/: lightning.yaml
configs/attack/: classification_eps1.75_fgsm.yaml  classification_eps2_pgd10_step1.yaml  classification_eps8_pgd10_step1.yaml
configs/attack/callbacks/: image_visualizer.yaml
configs/attack/gain/: cross_entropy.yaml  dlr.yaml
configs/attack/objective/: misclassification.yaml  zero_ap.yaml
configs/attack/threat_model/: additive.yaml
configs/callbacks/: lr_monitor.yaml  model_checkpoint.yaml
configs/datamodule/: armory_carla_over_objdet_perturbable_mask.yaml  cifar10.yaml  imagenet.yaml
configs/experiment/: ImageNet_Timm.yaml
configs/metric/: accuracy.yaml
configs/model/: modular.yaml  torchvision_retinanet.yaml
docs/: attack_in_armory.md
examples/: README.md
examples/anomalib_adversary/: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
examples/anomalib_adversary/anomalib_adversary/: callbacks.py
examples/anomalib_adversary/configs/anomalib/: stfpm_mart.yaml
examples/armory_attack/: pytorch_wrapper.py
examples/armory_attack/mart_armory/: pytorch_wrapper.py
examples/art_wrapper/: adversary_in_art.py
examples/carla_overhead_object_detection/: Makefile  README.md  requirements.txt
examples/carla_overhead_object_detection/tests/: conftest.py  test_configs.py  test_experiments.py
examples/fiftyone/: README.md
examples/mart_armory/: README.md  pyproject.toml  requirements.txt  setup.py
examples/mart_armory/hydra_plugins/hydra_mart_armory/: mart_armory.py
examples/mart_armory/mart_armory/: __init__.py  attack_wrapper.py  batch_converter.py  generate_attack_config.py  model_transform.py  pytorch_wrapper.py
examples/mart_armory/mart_armory/configs/: assemble_attack.yaml
examples/mart_armory/mart_armory/configs/attack/: data_coco.yaml
examples/mart_armory/mart_armory/configs/attack/gain/: rcnn_training_loss.yaml
examples/mart_armory/mart_armory/configs/attack/model_transform/: armory_objdet.yaml
examples/mart_armory/mart_armory/configs/batch_c15n/: data_coco.yaml
examples/mart_armory/mart_armory/configs/batch_c15n/transform/: pixel_255to1.yaml
examples/mart_armory/mart_armory/configs/batch_converter/: object_detection.yaml
examples/mart_armory/mart_armory/configs/model_transform/: armory_objdet.yaml
examples/mart_armory/mart_armory/configs/model_wrapper/: art_rcnn.yaml
examples/mart_armory/tests/: test_batch_converter.py
examples/robust_bench/: .gitignore  README.md  requirements.txt
examples/robust_bench/tests/: helpers  test_experiments.py
hydra_plugins/hydra_mart/: mart.py
mart/: __init__.py  __main__.py  eval.py  generate_adversary_config.py  generate_config.py  train.py
mart/attack/: __init__.py  adversary.py  adversary_in_art.py  adversary_wrapper.py  batch_c15n.py  batch_converter.py  composer.py  creator.py  enforcer.py  gain.py  gradient_modifier.py  initializer.py  model_transform.py  objective.py  perturbation_manager.py  perturber.py  projector.py  threat_model.py
mart/attack/callbacks/: __init__.py  base.py  best.py  eval_mode.py  lr_scheduler.py  no_grad_mode.py  odi.py  progress_bar.py  visualizer.py
mart/attack/composer/: __init__.py  modular.py  patch.py  visualizer.py
mart/attack/initializer/: __init__.py  base.py  vision.py
mart/attack/objective/: __init__.py  base.py  classification.py  object_detection.py
mart/attack/perturber/: __init__.py  batch.py  perturber.py
mart/attack/vision/: __init__.py  initializer.py  objective.py
mart/callbacks/: __init__.py  adversarial_training.py  adversary_connector.py  anomalib.py  eval_mode.py  fiftyone.py  freeze.py  gradients.py  log_metrics.py  logging.py  metrics.py  mode.py  no_grad_mode.py  progress_bar.py  visualizer.py
mart/configs/: lightning.yaml
mart/configs/attack/: adaptive_gradient_ascent.yaml  adversary.yaml  classification_autoattack.yaml  classification_eps1.75_fgsm.yaml  classification_eps2_pgd10_step1.yaml  classification_eps8_pgd10_step1.yaml  classification_fgsm_linf.yaml  classification_pgd_linf.yaml  data_coco.yaml  data_list_pixel01.yaml  fgm.yaml  gradient_ascent.yaml  iterative.yaml  iterative_sgd.yaml  linf.yaml  mask.yaml  object_detection_lp_patch_adversary.yaml  object_detection_lp_patch_adversary_simulation.yaml  object_detection_mask_adversary.yaml  object_detection_mask_adversary_missed.yaml  object_detection_patch_adversary.yaml  object_detection_patch_adversary_simulation.yaml  object_detection_rgb_mask_adversary.yaml  object_detection_universal_missed.yaml  pgd.yaml  universal.yaml
mart/configs/batch_c15n/: data_coco.yaml  data_list_pixel01.yaml  dict.yaml  input_only.yaml  (+6 more)
mart/data/: modular.py
mart/datamodules/: __init__.py  coco.py  fiftyone.py  modular.py
mart/models/: __init__.py  detection.py  dual_mode.py  mnist_module.py  modular.py  yolo.py  yolov3.py  yolox.py
mart/nn/: __init__.py  module.py  nn.py
mart/optim/: __init__.py  optimizer.py
mart/tasks/: lightning.py
mart/transforms/: __init__.py  extended.py  objdet.py  tensor_array.py  torchvision_ref.py  transforms.py
mart/utils/: __init__.py  adapters.py  config.py  export.py  imports.py  instantiators.py  lightning.py  logging_utils.py  modality_dispatch.py  monkey_patch.py  optimization.py  pylogger.py  rich_utils.py  silent.py  utils.py
tests/: conftest.py  test_adversary.py  test_adversary_connector.py  test_batch.py  test_composer.py  test_configs.py  test_datamodules.py  test_dependency.py  test_enforcer.py  test_eval.py  test_experiments.py  test_gradient.py  test_initializer.py  test_perturbation_manager.py  test_perturber.py  test_projector.py  test_sweeps.py  test_threat_model.py  test_train.py  test_transforms.py  test_utils.py  test_visualizer.py
tests/helpers/: dataset_generator.py  dataset_utils.py  run_sh_command.py
(+227 files in other folders)
