[project]
name = "mart"
version = "0.6.0a0"
description = "Modular Adversarial Robustness Toolkit"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  { name = "Intel Corporation", email = "weilin.xu@intel.com" },
]

requires-python = ">=3.9"

dependencies = [
  "torch ~= 2.0.1",
  "torchvision ~= 0.15.2",
  "lightning[extra] ~= 2.0.5", # Full functionality including TensorboardX.
  "pydantic == 1.10.11", # https://github.com/Lightning-AI/lightning/pull/18022/files
  "torchmetrics == 1.0.1",
  "numpy == 1.23.5", # https://github.com/pytorch/pytorch/issues/91516

  # --------- hydra --------- #
  "hydra-core ~= 1.2.0",
  "hydra-colorlog ~= 1.2.0",
  "hydra-optuna-sweeper ~= 1.2.0",

  # --------- loggers --------- #
  # wandb
  # neptune-client
  # mlflow
  # comet-ml

  # --------- others --------- #
  "pyrootutils ~= 1.0.4",      # standardizing the project root setup
  "rich ~= 12.6.0",            # beautiful text formatting in terminal
  "timm ~= 0.9.6",            # pytorch image models

  # ----- object detection----- #
  "pycocotools ~= 2.0.5",
]

[project.urls]
Source = "https://github.com/IntelLabs/MART"

[project.scripts]
mart = "mart.__main__:main"

[project.optional-dependencies]
developer = [
  "pre-commit ~= 2.20.0",      # hooks for applying linters on commit
  "pytest ~= 7.2.0",           # tests
  "sh ~= 1.14.3",              # for running bash commands in some tests
  "wheel",                     # support setup.py
  "pytest-cov[toml]",
  "protobuf==3.20.0"
]

fiftyone = [
  "fiftyone ~= 0.21.4",
]

extras = [
]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = ["mart*", "hydra_plugins*"]

[tool.setuptools.package-data]
"*" = ["*.yaml"]

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]
