[project]
name = "anomalib_adversary"
version = "0.1.0a"
description = "Evaluating robustness of anomaly detection models in Anomalib."
authors = [
  {name = "Intel Corporation"}
]

dependencies = [
    # Lock to an earlier version of anomalib because they later decorate anomalib.models.image.winclip.torch_model.WinClipModel.forward() with torch.no_grad().
    "anomalib[full] @ git+https://github.com/openvinotoolkit/anomalib.git@241c14787bded6cd3cb5241b74673477601479ce",
    "mart @ https://github.com/IntelLabs/MART/archive/refs/tags/v0.6.1.zip",
    "torch-rotation==0.1.2",
]

[tool.setuptools.packages.find]
include = ["anomalib_adversary*"]
